// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`banner:object 1`] = `
Array [
  Array [
    "dist/default.cjs.js",
    "/*!
 * name v1.2.3
 * (c) 2018-present author
 * Released under the GPL License.
 */
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:string 1`] = `
Array [
  Array [
    "dist/default.cjs.js",
    "woot
'use strict';

var _default = {};

module.exports = _default;
",
  ],
]
`;

exports[`banner:true 1`] = `
Array [
  Array [
    "test/fixtures/banner/dist/index.cjs.js",
    "/*!
 * foo v0.0.0
 * (c) 2015-present name <email@email.com>
 * Released under the MIT License.
 */
'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`buble:async 1`] = `
Array [
  Array [
    "dist/async.cjs.js",
    "'use strict';

var this$1 = undefined;
var a = function () { return new Promise(function ($return, $error) {
  return $return({ a: 'a' });
}.bind(this$1)); };

var async = a().then(function (res) { return Object.assign({}, res); });

module.exports = async;
",
  ],
]
`;

exports[`buble:async-and-object-rest-spread 1`] = `
Array [
  Array [
    "dist/async-dot-dot-dot.cjs.js",
    "'use strict';

var asyncDotDotDot = (function () {
  return new Promise(function ($return, $error) {
    return this.bar().then(function ($await_1) {
      try {
        return $return(Object.assign({}, $await_1));
      } catch ($boundEx) {
        return $error($boundEx);
      }
    }.bind(this), $error);
  }.bind(this));
});

module.exports = asyncDotDotDot;
",
  ],
]
`;

exports[`buble:react-jsx 1`] = `
Array [
  Array [
    "dist/react-jsx.cjs.js",
    "'use strict';

var reactJsx = React.createElement(
  \\"div\\",
  { a: 1 },
  \\"hi\\"
);

module.exports = reactJsx;
",
  ],
]
`;

exports[`buble:vue-jsx 1`] = `
Array [
  Array [
    "dist/vue-jsx.cjs.js",
    "'use strict';

var vueJsx = {
  render: function render() {
    var h = arguments[0];

    return h(
      \\"div\\",
      {
        attrs: { a: 1 }
      },
      [\\"hi\\"]
    );
  }
};

module.exports = vueJsx;
",
  ],
]
`;

exports[`defaults 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

var index = 42;

module.exports = index;
",
  ],
]
`;

exports[`exclude file 1`] = `
Array [
  Array [
    "dist/index.cjs.js",
    "'use strict';

function _interopDefault (ex) { return (ex && (typeof ex === 'object') && 'default' in ex) ? ex['default'] : ex; }

var foo = _interopDefault(require('./foo.js'));



module.exports = foo;
",
  ],
]
`;
